<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/main1"
    android:padding="5dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_car"
        android:textSize="25sp"
        android:textColor="@color/main2"
        android:textStyle="bold"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/dialog_admin_add_car_modeledit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car_model"
        android:textColorHint="@color/hint"
        android:textColor="@color/main2"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/main3"
        android:inputType="textCapWords"
        />

    <EditText
        android:id="@+id/dialog_admin_add_car_yearedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car_year"
        android:textColorHint="@color/hint"
        android:textColor="@color/main2"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/main3"
        android:inputType="number"
        />

    <ImageView
        android:id="@+id/dialog_admin_add_car_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/tikla"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/dialog_admin_add_car_okbutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/main2"
        android:text="@string/okey"
        />
</LinearLayout>