<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/main1"
    android:padding="5dp"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="25sp"
        android:textColor="@color/main2"
        android:textStyle="bold"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/dialog_admin_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/main3"
        android:hint="@string/password"
        android:textColorHint="@color/hint"
        android:textColor="@color/main2"
        android:gravity="center"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/dialog_admin_login_okbutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/okey"
        android:backgroundTint="@color/main2"
        />




</LinearLayout>