<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/main3"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/main3"

        />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar">

        <EditText
            android:id="@+id/login_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main1"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:hint="@string/email"
            android:textColorHint="@color/hint"
            android:textColor="@color/main2"
            android:textStyle="bold"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main1"
            android:inputType="textPassword"
            android:padding="12dp"
            android:hint="@string/password"
            android:textColorHint="@color/hint"
            android:textColor="@color/main2"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/login_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:paddingVertical="15dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/main2"
                android:textColor="@color/main3"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/login_signup_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main2"
                android:text="@string/signup"
                android:textColor="@color/main3"
                android:paddingVertical="15dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                />

        </LinearLayout>


        <Button
            android:id="@+id/login_admin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:paddingVertical="15dp"
            android:backgroundTint="@color/main2"
            android:textColor="@color/main3"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>