<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:background="@color/main3"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_signup_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/signup" 
        android:background="@color/main1"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_signup_emailedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main1"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/main2"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/activity_signup_passwordedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main1"
            android:gravity="center"
            android:textColor="@color/main2"
            android:textStyle="bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/activity_signup_phonenumberedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main1"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/main2"
            android:textStyle="bold"
            android:padding="12dp"
            android:textColorHint="@color/hint" />


    </LinearLayout>

    <Button
        android:id="@+id/activity_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main2"
        android:text="@string/signup"
        android:textColor="@color/main3"
        android:paddingVertical="20dp"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>